trabalhando no formulario

--- a/src/main/resources/templates/pesquisa/cadPesquisa.html
+++ b/src/main/resources/templates/pesquisa/cadPesquisa.html
@@ -39,12 +39,12 @@
 			data vencimento <input type="date" name="dataVencimento" />
 		</div>
 		<br>
-		<div>
+		<!--<div>
 			<label>Respostas</label>
 			<select name="listaRespostas">
 				<option th:each="r: ${respostas}" th:text="${r.id}" th:value="${r.id}"></option>
 			</select>
-		</div>
+		</div>-->
 		<div>
 			<button type="submit">Cadastrar</button>
 		</div>
