resposta-controller em andamento

--- a/src/main/resources/templates/resposta/formulario.html
+++ b/src/main/resources/templates/resposta/formulario.html
@@ -12,7 +12,7 @@
     <form method="post" style="border:2" action="novoFormulario">
 
 		<input type="hidden" name="id"></input>
-		<input type="hidden" name="resposta"></input>
+		<input type="hidden" name="resposta_id"></input>
 
 
 		<!--como pegar o ip da maquina-->
