--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -1,66 +1,69 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Lista de Usuarios</title>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet">
-<!--Import materialize.css-->
-<link type="text/css" rel="stylesheet" href="css/materialize.min.css"
-	media="screen,projection" />
-
-<!--Let browser know website is optimized for mobile-->
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-</head>
-<body>
-	<table>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../../static/css/listas/lista.css" />  
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+		<!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+		<title>Lista de Cursos</title>
+	  </head>
+	  <body>
+	
+		
+		<nav class="navbar bg-light fixed-top">
+		  <div class="container-fluid">
+			<a class="navbar-brand" href="#">Lista de Cursos Senai</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+			  <div class="offcanvas-header">
+				<h5 class="offcanvas-title" id="offcanvasNavbarLabel">Pesquisar</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+			  </div>          
+				<form class="d-flex" role="search" action="/buscarCurso">
+				  <input name="curso" class="form-control me-2" type="search" placeholder="Pesquisar curso" aria-label="Search">
+				  <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+				</form>
+			  </div>
+			  
+			</div>
+		  </div>
+		</nav>
+		
+		<h1>Lista de Curso</h1>
+		<table id="customers">
 		<thead>
-			<tr>
-				<th>ID</th>
-				<th>Nome</th>
-				<th>nif</th>
-				<th>Tipo</th>
-				<th>Alterar</th>
-				<th>Excluir</th>
-
-			</tr>
-
+		  <tr>
+			<th class="id">ID</th>
+			<th>Nome</th>
+			<th class="th-height">Tipo de Curso</th>
+			<th class="th-height">Alterar</th>
+			<th class="th-height">Excluir</th>
+		  </tr>
 		</thead>
 		<tbody>
-			<tr th:each="user:${usuario}">
-
-				<td th:text="${user.userId}" />
-				<td th:text="${user.nome}" />
-				<td th:text="${user.nif}" />
-				<td th:text="${user.tipo}" />
-
-				<td><a th:href="@{/alterar(userId=${user.userId})}"><i
-						class="material-icons">create</i> </a></td>
-				<td><a th:href="@{/excluir(userId=${user.userId})}"> <i
-						class="material-icons">delete_forever</i>
-				</a></td>
-
-			</tr>
-
+		  <tr th:each="c:${cursoC}">
+			<td th:text="${c.id}" />
+			 <td th:text="${c.descCurso}" />
+			 <td th:text="${c?.tipo}"/>
+			 <td><a th:href="@{/alteraCurso(id=${c.id})}">
+			  <span class="material-symbols-outlined">
+				settings
+				</span> </a></td>
+			 <td><a th:href="@{/exclueCurso(id=${c.id})}"><span class="material-symbols-outlined">
+			  delete
+			  </span></a></td>
+		 </tr>
+		 
 		</tbody>
-
-
-	</table>
-
-	<ul class="pagination">
-		<li th:class="${pagAtual == 1 ? 'disabled' : 'waves-effect'}"><a
-			th:href="${pagAtual > 1 ? pagAtual - 1 : '#'}"><i
-				class="material-icons">chevron_left</i></a></li>
-		<li th:class="${pagAtual == p ? 'active purple' : 'waves-effect'}"
-			th:each="p:${numPag}"><a th:href="${p}"><span th:text="${p}"></span></a></li>
-
-		<li th:class="${pagAtual == totalPages ? 'disabled' : 'waves-effect'}"><a
-			th:href="${pagAtual < totalPages ? pagAtual + 1 : '#'}"><i
-				class="material-icons">chevron_right</i></a></li>
-
-	</ul>
-
-</body>
-</html>
+		</table>
+	
+		<!-- JavaScript Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+	  </body>
+	</html>
