pesquisaId ok, buscar da pesquisa em progresso

--- a/src/main/resources/templates/pesquisa/listaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/listaPesquisa.html
@@ -9,6 +9,12 @@
 <body>
     <h1>Lista Pesquisas</h1>
 
+	
+	<form action="/pesquisa/buscar">
+		<input type="search" name="id" placeholder="buscar por id">
+		<button type="submit">Buscar</button>
+	</form>
+
 	<table class="striped">
 		<thead>
 			<th>Id</th>
