pesquisa-id ok, fazendo periodo(enum)

--- a/src/main/resources/templates/pesquisa/cadPesquisa.html
+++ b/src/main/resources/templates/pesquisa/cadPesquisa.html
@@ -16,7 +16,7 @@
 		<input type="hidden" name="id"></input>
 
 		<div>
-			turma <input type="text" name="turma" />
+			turma <input type="text" name="turma" placeholder="exemplo: Dev Noite 1200hs periodo: Noturno"/>
 		</div>
 		<br>
 		<div>
