--- a/src/main/resources/templates/resposta/sucesso.html
+++ b/src/main/resources/templates/resposta/sucesso.html
@@ -9,4 +9,13 @@
 <body>
     <h1>FORMULARIO PREENCHIDO COM SUCESSO!!!!</h1>
 </body>
+<script>
+
+    setTimeout(() => {
+        window.location.href="/resposta/codigoPesquisa"
+    }, 2000);
+
+    // colocar os segundos na tela e falar que vai ser redirecionado
+    
+    </script>
 </html>
