login e interceptor funcionando

--- a/src/main/resources/templates/telainicial/telaInicialDiretor.html
+++ b/src/main/resources/templates/telainicial/telaInicialDiretor.html
@@ -7,6 +7,10 @@
 
 <body>
 
+	<nav>
+	<a href="/logout"><i class="material-icons right" style="font-size: 20px">exit_to_app</i></a>
+	</nav>
+
 <div>
 		  <a href="/cadastro" style="margin: 0 40px 0 60px" >Cadastrar Usuario</a>
 			
