--- a/src/main/resources/templates/telainicial/telaInicialDocencia.html
+++ b/src/main/resources/templates/telainicial/telaInicialDocencia.html
@@ -7,6 +7,10 @@
 
 <body>
 
+	<nav>
+	<a href="/logout"><i class="material-icons right" style="font-size: 20px">exit_to_app</i></a>
+	</nav>
+
 	<a href="/pesquisa/listar" style="margin: 0 40px 0 60px">Listar Pesquisa</a>
 			
 	<a href="/resposta/formulario" style="margin: 0 40px 0 60px">Formulario</a>	
