--- a/src/main/resources/templates/pesquisa/listaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/listaPesquisa.html
@@ -35,9 +35,7 @@
 				<td th:text="${ps.turma}"/>
 				<td th:text="${ps.dataVencimento}"/>
 				<td th:text="${ps.justificativa}"/>
-                <td><a th:href="@{#}">Alterar</a></td>
-				<td><a th:href="@{#}">Excluir </a></td>
-				<td><a th:href="@{#}">Lista de Respostas</a></td>
+				<td><a th:href="@{/pesquisa/listarResposta(id=${ps.id})}">Lista de Respostas</a></td>
 
 			</tr>
 
