--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -27,12 +27,12 @@
 				<input type="hidden" name="id"  >
 					<i class="material-icons">person</i><input type="text"
 					class="input" name="nif" 
-					id="nif" placeholder="Digite seu NIF">			
+					id="nif" placeholder="Digite seu NIF" required>			
 			
 			
 					<i class="material-icons">lock_outline</i> <input type="password"
 					class="input" name="senha" id="senha" autocomplete="off"
-					placeholder="Digite sua senha">
+					placeholder="Digite sua senha" required>
 
 				<input type="submit" class="button" value="Login">
 			</div>
