--- a/src/main/resources/templates/pergunta/cadPergunta.html
+++ b/src/main/resources/templates/pergunta/cadPergunta.html
@@ -14,7 +14,7 @@
 		<input type="hidden" name="id" th:value="${p?.id}"></input>
 
 		<div>
-			pergunta <input type="text" name="textoPergunta" th:value="${p?.textoPergunta}"/>
+			pergunta <input type="text" name="textoPergunta" th:value="${p?.textoPergunta}" required/>
 		</div>
 		<br>		
 		<div>
