--- a/src/main/resources/templates/resposta/codigoPesquisa.html
+++ b/src/main/resources/templates/resposta/codigoPesquisa.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Digite o código do formulário</h1>
     <form action="/resposta/buscar">
-    <input type="number" name="id">
+    <input type="number" name="id" required>
     <button type="submit">Buscar</button>
 </form>
 </body>
