--- a/src/main/resources/templates/curso/curso.html
+++ b/src/main/resources/templates/curso/curso.html
@@ -9,12 +9,12 @@
 
 	<form action="salvarCurso" method="post" >
 		<h2> Cadastro de Curso</h2>
-		<input type="hidden" name="id" th:value="${cs?.id}"/>
-		<input type="text"  name="descCurso" th:value="${cs?.descCurso}"/>
+		<input type="hidden" name="id" th:value="${cs?.id}" required/>
+		<input type="text"  name="descCurso" th:value="${cs?.descCurso}" required/>
 
 		
 		
-		<select name="tipo">
+		<select name="tipo" required>
 					<option
 						th:each="tipo : ${T(br.com.projeto.sistemadeavaliacao.model.TipoCurso).values()}"
 						th:value="${tipo}" 
