adicionar pergunta em progresso

--- a/src/main/resources/templates/pergunta/cadPergunta.html
+++ b/src/main/resources/templates/pergunta/cadPergunta.html
@@ -16,7 +16,17 @@
 		<div>
 			pergunta <input type="text" name="textoPergunta" th:value="${p?.textoPergunta}" required/>
 		</div>
-		<br>		
+		<br>
+		<!-- <div>
+			<label>
+				<input type="checkbox" name="pesquisa.id">
+				<span>Pesquisa</span>
+			</label>
+		</div>		 -->
+
+		<select name="idpesquisa" required>
+			<option th:each="p:${pesq}" th:text="${p.turma}" th:value="${p.id}"></option>
+		</select>
 		<div>
 			<button type="submit">Cadastrar</button>
 		</div>
