styles front sprint 2

--- a/src/main/resources/templates/cadastro/cadastroUsuario.html
+++ b/src/main/resources/templates/cadastro/cadastroUsuario.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="../../static/css/cadastro-users/cad-users.css"
+      href="../../css/cadastro-users/cad-users.css"
       rel="stylesheet"
     />
     <!-- Compiled and minified CSS -->
@@ -108,6 +108,8 @@
       </div>
     </div>
 	
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../../js/alerts/mensagem.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
