--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../../static/css/listas/lista.css" />  
+		<link rel="stylesheet" href="../../css/listas/lista.css" />  
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 		<!-- CSS only -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-		<title>Lista de Cursos</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+		<title>Lista de Usuario</title>
 	  </head>
 	  <body>
 	
@@ -22,13 +22,9 @@
 			</button>
 			<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
 			  <div class="offcanvas-header">
-				<h5 class="offcanvas-title" id="offcanvasNavbarLabel">Pesquisar</h5>
+				<h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
 				<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 			  </div>          
-				<form class="d-flex" role="search" action="/buscarCurso">
-				  <input name="curso" class="form-control me-2" type="search" placeholder="Pesquisar curso" aria-label="Search">
-				  <button class="btn btn-outline-success" type="submit">Pesquisar</button>
-				</form>
 			  </div>
 			  
 			</div>
@@ -36,7 +32,26 @@
 		</nav>
 		
 		<h1>Lista de Usuários</h1>
+
+		<div class="dropend">
+			<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+			  Pesquise
+			</button>
+			<ul class="dropdown-menu">
+
+				  <form action="/buscarCurso">
+					<label>Buscar por data</label><br> <input type="search"
+						name="curso" class="input-buscar" id="pesqui">
+					 <input type="submit"
+						value="buscar" class="button-buscar">
+				</form>
+				
+			</ul>
+		  </div>
+
+
 		<table id="customers">
+			
 		<thead>
 		  <tr>
 			<th class="id">ID</th>
@@ -48,27 +63,38 @@
 			
 		  </tr>
 		</thead>
-		<tbody>
+		<tbody id="tb-user">
 			<tr th:each="user:${usuario}">
 
 				<td th:text="${user.userId}" />
 				<td th:text="${user.nome}" />
 				<td th:text="${user.nif}" />
 				<td th:text="${user.tipo}" />
-			 <td><a th:href="@{/alteraCurso(id=${c.id})}">
+				
+			 <td><a th:href="@{/alterar(userId=${user.userId})}">
 			  <span class="material-symbols-outlined">
 				settings
 				</span> </a></td>
-			 <td><a th:href="@{/exclueCurso(id=${c.id})}"><span class="material-symbols-outlined">
+			 <td><a th:href="@{/exclueCurso(id=${user.userId})}"><span class="material-symbols-outlined">
 			  delete
 			  </span></a></td>
 		 </tr>
 		 
 		</tbody>
 		</table>
-	
+		
+		<nav class="pagination">
+			<ul class="pagination">
+			  <li class="page-item" th:class="${pagAtual == 1 ? 'disabled' : 'waves-effect' }"><a class="page-link" th:href="${pagAtual > 1 ? pagAtual - 1 : '#' }">Anterior</a></li>
+			  <li class="page-item" th:class="${pagAtual == p ? 'active purple' : 'waves-effect'}" th:each="p:${numPag}"><a class="page-link" th:href="${p}"><span th:text="${p}"></span></a></li>
+			  <li class="page-item" th:class="${pagAtual == totalPages ? 'disabled' : 'waves-effect'}"><a class="page-link" th:href="${pagAtual < totalPages ? pagAtual + 1 : '#'}">Próximo</a></li>
+			</ul>
+		  </nav>
 
+	
 		<!-- JavaScript Bundle with Popper -->
+		  
+	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 	  </body>
 	</html>
