--- a/src/main/resources/templates/pergunta/cadPergunta.html
+++ b/src/main/resources/templates/pergunta/cadPergunta.html
@@ -4,23 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<link href="../../css/cadastro-per/cad-per.css"rel="stylesheet"/>
+  <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+    <title>Cadastro de Pergunta</title>
 </head>
 <body>
-    <h1>Cadastro de Pergunta</h1>
 
-    <form method="post" style="border:2" action="novaPergunta">
+    <div class="area">
+		<ul class="circles">
+		  <li></li>
+		  <li></li>
+		  <li></li>
+		  <li></li>
+		  <li></li>
+		  <li></li>
+		  <li></li>
+		  <li></li>
+		  <li></li>
+		  <li></li>
+		</ul>
+	  </div>
 
-		<input type="hidden" name="id" th:value="${p?.id}"></input>
+	<div class="container main-div">
+    	<form  action="novaPergunta" method="post">
+				<input type="hidden" name="id" th:value="${p?.id}"/>
 
-		<div>
-			pergunta <input type="text" name="textoPergunta" th:value="${p?.textoPergunta}"/>
-		</div>
-		<br>		
-		<div>
-			<button type="submit">Cadastrar</button>
-		</div>
-	</form>
+				<div class="cad-per">
+					<h4 class="cad-per-item" >Cadastro de Pergunta</h4>	
 
+					<input 
+						placeholder="Pergunta"
+						class="form-control per"
+						type="text" 
+						name="textoPergunta" 
+						th:value="${p?.textoPergunta}"
+					/>
+				</div>
+				<br>		
+				<div>
+					<button 
+						type="submit"
+						class="btn btn-primary">
+						<b>CADASTRAR</b>
+					</button>
+				</div>
+		</form>
+
+		<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+		crossorigin="anonymous"
+	  ></script>
 </body>
 </html>
