--- a/src/main/resources/static/css/cadastro-cursos/cad-curso.css
+++ b/src/main/resources/static/css/cadastro-cursos/cad-curso.css
@@ -15,7 +15,8 @@
   -webkit-transition: -webkit-transform 300ms, box-shadow 300ms;
   -moz-transition: -moz-transform 300ms, box-shadow 300ms;
   transition: transform 300ms, box-shadow 300ms;
-  box-shadow: 5px 10px 10px rgba(157, 228, 76, 0.2);
+  box-shadow: #fff 0px 25px 20px -20px;
+
 }
 .main-div h4{
   align-items: center;
@@ -51,7 +52,7 @@ body{
 
 
 .area{
-    background: #0c0133;  
+    background: #002855;  
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
     width: 100%;
     height:100vh;
