--- a/src/main/resources/templates/curso/listaBuscarCurso.html
+++ b/src/main/resources/templates/curso/listaBuscarCurso.html
@@ -2,33 +2,65 @@
 <html xmlns:th="http://thymeleaf.org">
 <head>
 <meta charset="utf-8">
-<title>Lista Buscar Curso </title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ 
+<link rel="stylesheet" href="../../css/listas/lista.css" />  
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<title>Lista Buscar de Curso </title>
 </head>
 <body>
 
+	<nav class="navbar navbar-dark bg-dark fixed-top">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">Lista de Busca Cursos Senai</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+				<div class="offcanvas-header">
+				  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Pesquisar</h5>
+				  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+				</div>          
+				  <form class="d-flex" role="search" action="/buscarCurso">
+					<input name="curso" class="form-control me-2" type="search" placeholder="Pesquisar curso" aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Pesquisar</button>
+				  </form>
+				</div>
+				
+			  </div>
+			</div>
+		  </nav>
+		  
+		  <h1>Lista Busca de Curso</h1>
+			<div>
+				<button onclick="history.go(-1);" 
+				class="btn btn-outline-success">Voltar para Cadastro de curso</button>
+			</div>
+			
 
-	 
-	<div class="divLista">
-	<button onclick="history.go(-1);" class="btnReturn">Voltar para Cadastro de curso</button>
-	
-	    <table class="lista">
-		    <thead>
-			    <tr>
-				    <th class="aumentar">id</th>
-    			    <th class="aumentar">Descrição</th>
-                    <th class="aumentar">tipo</th>
-		    	</tr>
-		    </thead>
-	    	<tbody>
-	    		<tr th:each="c:${cursoC}" >			
-		    		<td th:text="${c?.id}" />
-			    	<td th:text="${c?.descCurso}" />	
-                    <td th:text="${c?.tipo}" />		
-			    </tr>	
-	    	</tbody>
-	    </table>
-	    
-    </div>
+				<table id="customers">
+					<thead>
+						<tr>
+							<th class="aumentar">id</th>
+							<th class="aumentar">Descrição</th>
+							<th class="aumentar">tipo</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="c:${cursoC}" >			
+							<td th:text="${c?.id}" />
+							<td th:text="${c?.descCurso}" />	
+							<td th:text="${c?.tipo}" />		
+						</tr>	
+					</tbody>
+				</table>
+				
+		</div>
 
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
