--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,65 +1,38 @@
 <html>
-    <head>
-        <title>Formulário</title>
-        <meta charset="utf-8">
-      	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-		<link rel="stylesheet" href="../css/index_estilo.css"> 
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">	
-    </head>
-	<body>	
+  <head>
+    <title>Formulário</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../css/login/login.css" />
+  </head>
+  <body>
+    <section class="login" id="fundo">
+      <div class="head">
+        <img class="img" src="../../static/img/kaozgreat.png" />
+      </div>
 
-		<nav>
-			<div class="nav-wrapper">
-				<img src="imagens/logo_senai.png" alt="Logo do SENAI" >	
-			  <ul class="right hide-on-med-and-down">
-				<li><a class="waves-effect waves-light btn"><b>Eventos</b></a></li>
-			  </ul>
-			</div>
-		</nav>
-		
-		<div class="background-image">
-		<div>		
-		<form class="signup-form" action="login" method="post">
-			<h3>Login</h3>
-			<div class="informacoes">
-				<input type="hidden" name="id"  >
-					<i class="material-icons">person</i><input type="text"
-					class="input" name="nif" 
-					id="nif" placeholder="Digite seu NIF">			
-			
-			
-					<i class="material-icons">lock_outline</i> <input type="password"
-					class="input" name="senha" id="senha" autocomplete="off"
-					placeholder="Digite sua senha">
+      <p class="msg">Bem vindo de volta</p>
 
-				<input type="submit" class="button" value="Login">
-			</div>
-			<br>
-			<br>				
-		</form>
-		</div>
-		</div>
-		  
-		<footer class="page-footer">
-			<div class="container" >
-				<div class="row" >
-					<p class="grey-text text-lighten-4">Escola Senai "Ricardo Lerner"<br>
-						Rua Direita,955 - Vila Santo Antonio - Cotia/SP - CEP 06708-280<br>
-						Telefone: (11) 4628-1600 |E-mail:atendimento138@sp.senai.br</p><br>
-						<a href="https://www.facebook.com/senainacional/" target="_blank"><img src="imagens/icon_facebook.png" alt="Perfil do SENAI no Facebook"></a>
-						<a href="https://twitter.com/senainacional?lang=en" target="_blank"><img src="imagens/icon_twitter.png" alt="Perfil do SENAI no Twitter"></a>
-				</div>
-			</div>
-			<hr style="height: 2px; background-color: white;">
-			<div class="footer-copyright" style="background-color: #F63D3D">
-				<div class="container">
-				<b>Copyright 2022 © Todos os direitos reservados.<br>
-					O conteúdo do site não pode ser editado, copiado ou distribuído sem expressa autorização do SENAI-SP.</b> 
-				</div>
-			</div>
-		</footer>
+      <div class="form">
+        <form>
+          <input
+            type="text"
+            placeholder="NIF"
+            class="text"
+            id="username"
+            required
+          /><br />
+          <input
+            type="password"
+            placeholder="••••••••••••••"
+            class="password"
+          /><br />
+          <a href="#" class="btn-login" id="do-login">Login</a>
+          <a href="#" class="forgot" id="do-forgot">Esqueceu a senha ?</a>
+        </form>
+      </div>
+    </section>
 
-	</body>
+    <script src="../../js/login/login.js"></script>
+  </body>
 </html>
