--- a/src/main/resources/templates/pesquisa/listaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/listaPesquisa.html
@@ -1,33 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../../css/listas/lista.css" />  
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+		<!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	
+    <title>Lista Pesquisa</title>
 </head>
 <body>
-    <h1>Lista Pesquisas</h1>
 
-	
-	<form action="/pesquisa/buscar">
-		<input type="number" name="id" placeholder="buscar por id">
-		<button type="submit">Buscar</button>
-	</form>
 
-	<table class="striped">
+		
+		<nav class="navbar navbar-dark bg-dark fixed-top">
+		  <div class="container-fluid">
+			<a class="navbar-brand" href="#">Lista da Pesquisa</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+			  <div class="offcanvas-header">
+				<h5 class="offcanvas-title" id="offcanvasNavbarLabel">Pesquisar</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+			  </div>          
+			  </div>
+			  
+			</div>
+		  </div>
+		</nav>
+		
+		<h1>Lista da Pesquisa</h1>
+
+		<div class="dropend">
+			<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+			  Pesquise
+			</button>
+			
+		<ul class="dropdown-menu"></ul>
+			<form  class="d-flex form-pesquisa" role="search">
+				<input  class="form-control me-2" type="search" name="id"  aria-label="Search" id="input-busca">
+				<button class="btn btn-outline-success" type="submit">Pesquisar</button>
+			</form>
+
+	<table id="customers">
 		<thead>
-			<th>Id</th>
-			<th>Curso</th>
-			<th>Turma</th>
-			<th>Data Vencimento</th>
-			<th>Jusitificativa</th>
-			<th>#</th>
-			<th>#</th>
-			<th>#</th>
+			<tr>
+
+				<th class="id">Id</th>
+				<th class="th-height">Curso</th>
+				<th class="th-height">Turma</th>
+				<th class="th-height">Data Vencimento</th>
+				<th class="th-height">Jusitificativa</th>
+				<th class="">Alterar</th>
+				<th class="">Excluir</th>
+				<th class="">Respostas</th>
+			</tr>
 		</thead>
 
-		<tbody>
+		<tbody id="tb-user">
 			<tr th:each="ps:${pesq}">
 
 				<td th:text="${ps.id}"></td>
@@ -35,13 +70,31 @@
 				<td th:text="${ps.turma}"/>
 				<td th:text="${ps.dataVencimento}"/>
 				<td th:text="${ps.justificativa}"/>
-                <td><a th:href="@{#}">Alterar</a></td>
-				<td><a th:href="@{#}">Excluir </a></td>
+                <td><a th:href="@{#}">
+					<span class="material-symbols-outlined">
+					  settings </span> </a></td>
+				<td><a th:href="@{#}">
+					<span class="material-symbols-outlined">
+					delete</span></a></td>
 				<td><a th:href="@{#}">Lista de Respostas</a></td>
 
 			</tr>
 
 		</tbody>
 	</table>
+
+	
+	<nav class="pagination">
+		<ul class="pagination">
+		  <li class="page-item" th:class="${pagAtual == 1 ? 'disabled' : 'waves-effect' }"><a class="page-link" th:href="${pagAtual > 1 ? pagAtual - 1 : '#' }">Anterior</a></li>
+		  <li class="page-item" th:class="${pagAtual == p ? 'active purple' : 'waves-effect'}" th:each="p:${numPag}"><a class="page-link" th:href="${p}"><span th:text="${p}"></span></a></li>
+		  <li class="page-item" th:class="${pagAtual == totalPages ? 'disabled' : 'waves-effect'}"><a class="page-link" th:href="${pagAtual < totalPages ? pagAtual + 1 : '#'}">Próximo</a></li>
+		</ul>
+	  </nav>
+
+
+	<!-- JavaScript Bundle with Popper -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
