--- a/src/main/resources/templates/listas/listaBuscaUsuario.html
+++ b/src/main/resources/templates/listas/listaBuscaUsuario.html
@@ -2,14 +2,14 @@
 <html xmlns:th="http://thymeleaf.org">
 <head>
 <meta charset="utf-8">
-<title>Lista Buscar Curso </title>
+<title>Lista Buscar Usuario </title>
 </head>
 <body>
 
 
 	 
 	<div class="divLista">
-	<button onclick="history.go(-1);" class="btnReturn">Voltar para Cadastro de curso</button>
+	<button onclick="history.go(-1);" class="btnReturn">Voltar para Lista de usuarios</button>
 	
 	    <table>
 		    <thead>
@@ -20,13 +20,13 @@
 		    	</tr>
 		    </thead>
 	    	<tbody id="tba">
-	    		<tr th:each="user:${usuario}" >			
+	    		<tr th:each="user:${users}" >	
+					<td th:text="${user.userId}" />		
 		    		<td th:text="${user.nome}" />
 			    </tr>	
 	    	</tbody>
 	    </table>
 	    
     </div>
-	<script src="../../js/buscas/fetch.js"></script>
 </body>
 </html>
