--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -39,11 +39,12 @@
 			</button>
 			<ul class="dropdown-menu">
 
-				  <form action="/buscarCurso">
-					<label>Buscar por data</label><br> <input type="search"
-						name="curso" class="input-buscar" id="pesqui">
-					 <input type="submit"
-						value="buscar" class="button-buscar">
+				  <form action="/buscarUser">
+					<label>Buscar Usuario</label><br> <input type="search"
+						name="buscar" class="input-buscar" id="pesqui">
+						<button type="submit">search</button>
+					 <!-- <input type="submit"
+						value="buscar" class="button-buscar"> -->
 				</form>
 				
 			</ul>
