--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -3,12 +3,12 @@
     <title>Formulário</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../static/css/login/login.css" />
+    <link rel="stylesheet" href="../../css/login/login.css" />
   </head>
   <body>
     <section class="login" id="fundo">
       <div class="head">
-        <img class="img" src="../../static/img/kaozgreat.png" />
+        <img class="img" src="../../img/kaozgreat.png" />
       </div>
 
       <p class="msg">Bem vindo de volta</p>
@@ -21,18 +21,17 @@
             class="text"
             id="username"
             required
-          /><br />
+          />
           <input
             type="password"
             placeholder="••••••••••••••"
             class="password"
-          /><br />
+          />
           <a href="#" class="btn-login" id="do-login">Login</a>
-          <a href="#" class="forgot" id="do-forgot">Esqueceu a senha ?</a>
         </form>
       </div>
     </section>
 
-    <script src="../../static/js/login/login.js"></script>
+    <script src="../../js/login/login.js"></script>
   </body>
 </html>
