--- a/src/main/resources/templates/pesquisa/cadPesquisa.html
+++ b/src/main/resources/templates/pesquisa/cadPesquisa.html
@@ -6,11 +6,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../../css/pesquisa/pesquisa.css">
-	
+
 	<!-- CSS only -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+	<link rel="stylesheet" href="../../css/poppups/poppup.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css" rel="stylesheet" />
 	<!-- JQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css" rel="stylesheet" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
 	<title>Pesquisa</title>
@@ -19,83 +24,116 @@
 <body>
 	<div class="area">
 		<ul class="circles">
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
-		  <li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
 		</ul>
-	  </div>
+	</div>
 	<div class="container main-div">
-	<h1>Nova Pesquisa</h1>
+		<h1>Nova Pesquisa</h1>
 
-	<form method="post" action="novaPesquisa" class="">
+		<form method="post" action="novaPesquisa">
 
-		<input type="hidden" name="id"></input>
+			<input type="hidden" name="id" />
+
+
+			<div class="mb-3">
+				<label class="form-label">Turma</label>
+				<input type="text" class="form-control" name="turma"
+					placeholder="exemplo: Dev Noite 1200hs periodo: Noturno" required />
+			</div>
 			
-
-		<div class="mb-3">
-			<label for="" class="form-label">Turma</label>
-			<input type="text"  class="form-control" name="turma" placeholder="exemplo: Dev Noite 1200hs periodo: Noturno" required/>
-		</div>
-			<form>
 				<!-- Docentes -->
 				<div class="mb-3">
-					<label for="idSelect2">
-						Clique para selecionar um ou mais docentes:
-						</label>
+					<label>Selecione o Docente Responsavel</label>
 				</div>
-					<div class="mb-3">
-						<select class="select2 form-control" id="idSelect2" multiple="" tabindex="-1" style="display: none;" required>
-							<optgroup label="Docentes">
-								<option th:each="u:${usuario}" th:text="${u.nome}" th:value="${u.userId}"></option>
-							</optgroup>
-						</select>
-					</div>
+				<div class="mb-3">
+					<select name="usuarioDocente" class="form-select" >
+						<option disabled selected>Selecione...</option>
+						<option th:each="u:${usuario}" th:text="${u.nome}" th:value="${u.userId}"></option>
+					</select>
+				</div>
 
-				 <!-- Cursos -->
+				<div class="mb-3">
+					<label for="idSelect2">
+						Caso Tenha Mais Docentes Selecione Aqui:
+					</label>
+				</div>
+				<div class="mb-3">
+					<select  name="listaDocentes" class="select2 form-control " id="idSelect2" required multiple>	
+							<option th:each="u:${usuario}" th:text="${u.nome}" th:value="${u.userId}"></option>			
+					</select>
+				</div>
+
+				<!-- Cursos -->
 				<div class="mb-3">
 					<label>Curso</label>
 					<select class="form-select" name="curso.id" required>
 						<option disabled selected>Selecione o Curso</option>
 						<option th:each="c: ${cursos}" th:text="${c.descCurso}" th:value="${c.id}"></option>
 					</select>
-				 </div>
+				</div>
 
-			</form>
+				<!-- Retirar pergunta-->
+		
+				<div class="mb-3">
+					<div class="form-group row">
+						<label> <!-- class="col-sm-10" -->
+							Retirar Pergunta ?
+						</label>
+	
+						<div> <!-- class="col-sm-10"-->
+							<select name="idpesquisa" class="select2 form-control " id="idSelect2" multiple>
+								<option th:each="p:${pesq}" th:text="${p.id}" th:value="${p.id}" id="select"></option>	
+							</select>
+						</div>
+					</div>
+				</div>
 
-		<div class="mb-3">
-			<label class="form-label">Data de Enceramento</label>
-			<input type="date" name="dataVencimento"/>
-		</div>
-		<!--<div>
+			
+
+			<div class="mb-3">
+				<label class="form-label">Data de Enceramento</label>
+				<input type="date" name="dataVencimento" />
+			</div>
+			<!--<div>
 			<label>Respostas</label>
 			<select name="listaRespostas">
 				<option th:each="r: ${respostas}" th:text="${r.id}" th:value="${r.id}"></option>
 			</select>
-		</div>-->
-		<div>
-			<button type="submit" class="btn btn-primary" >Cadastrar</button>
-		</div>
-	</form>
+			</div>-->
+			<div>
+				<button 
+				type="submit" 
+				class="btn btn-primary">Cadastrar</button>
+				
+			</div>
 
-</div>
+			
+			<div class="d-grid gap-2" >
+				<span ><div th:replace="fragments/mensagem" ></div></span>	
+			</div>
 
-<!-- Script criados -->
-<script src="../../js/selects/select.js"></script>
+		</form>
 
-<!-- imports -->
-<!-- JavaScript Bundle with Popper -->
-<script
- src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
- crossorigin="anonymous"></script>
+	</div>
 
 
+	<!-- Script criados -->
+	<script src="../../js/selects/select.js"></script>
+
+	<!-- imports -->
+	<!-- JavaScript Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
