--- a/src/main/resources/templates/pergunta/listaPergunta.html
+++ b/src/main/resources/templates/pergunta/listaPergunta.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <!-- Favicon -->
+		<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
 	<link rel="stylesheet" href="../../css/listas/lista.css"/>	
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
