--- a/src/main/resources/templates/resposta/codigoPesquisa.html
+++ b/src/main/resources/templates/resposta/codigoPesquisa.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/codigoPesquisa/codigo.css">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+
     <title>Código do formulário</title>
 </head>
 <body>
     <div class="tudo">
     
-        <h2>Digite o código do formulário</h2>
             <form action="/resposta/buscar">
                 <div class="inbt">
-                    <input type="number" name="id"  value="0"> 
+                    <h2>Digite o código do formulário</h2>
+                    <input type="number" name="id"  value=""> 
                     
                     <button class="bt">
                         <a  type="submit">Buscar</a>
